[gd_scene load_steps=7 format=3 uid="uid://character_selection_scene"]

[ext_resource type="Script" path="res://scripts/ui/character_selection.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/default_theme.tres" id="2"]

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.1, 0.1, 0.2, 1, 0.15, 0.15, 0.25, 1, 0.2, 0.2, 0.3, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
fill = 1
fill_from = Vector2(0, 0)
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ViewportTexture" id="ViewportTexture_1"]
viewport_path = NodePath("ViewportContainer/SubViewport")

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("GradientTexture2D_1")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
text = "SELECT YOUR HERO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContent" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="HeroesContainer" type="HBoxContainer" parent="VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="InfoPanel" type="PanelContainer" parent="VBoxContainer/MainContent"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeroName" type="Label" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "Select a Hero"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsPanel" type="PanelContainer" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ViewportContainer" type="SubViewportContainer" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer/ViewportContainer"]
transparent_bg = true
size = Vector2i(400, 200)
render_target_update_mode = 4

[node name="HeroPreview" type="Node3D" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer/ViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer/ViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, 0, 2, 4)
fov = 45

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/MainContent/InfoPanel/VBoxContainer/ViewportContainer/SubViewport"]
transform = Transform3D(0.707, -0.5, 0.5, 0, 0.707, 0.707, -0.707, -0.5, 0.5, 0, 3, 0)
light_energy = 0.5

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="RerollButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
theme_override_font_sizes/font_size = 20
text = "REROLL (1 USE)"

[node name="SelectButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
theme_override_font_sizes/font_size = 24
disabled = true
text = "SELECT"